# jsontrait

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  rustc_serialize.rs  serde.rs
tests/: rustc_serialize.rs  serde.rs
